--- a/resources-Pushkin/resourceStyles.css
+++ b/resources-Pushkin/resourceStyles.css
@@ -113,7 +113,7 @@ header {
   flex-direction: row;
   justify-content: center;
   gap: 10%;
-
+  height: 50vh;
   /* position: relative;
   background-position: center bottom;
   background-size: cover;
@@ -134,14 +134,15 @@ header {
   background-color: transparent;
 }
 .resourceHubHeroLeft h6 {
-  font-size: 16px;
+  font-size: 1rem;
   color: blue;
 }
 .resourceHubHeroLeft h1 {
-  font-size: 68px;
+  font-size: 4rem;
+  margin: 0;
 }
 .resourceHubHeroLeft p {
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 /* .resourceHubHeroRight {
@@ -151,7 +152,8 @@ header {
 /* border: 1px solid rgb(231, 237, 246); */
 /* border: 1px solid black; */
 /* } */
-.imageCard {
+.imageCard,
+.image-card-2 {
   box-sizing: border-box;
   padding: 0;
   display: flex;
@@ -160,17 +162,25 @@ header {
   width: 100%;
   max-width: 380px;
   min-width: 200px;
-  height: 400px;
+  /* height: 400px; */
   overflow: hidden;
   border-radius: 8px;
   /* border: 1px solid black; */
   background-color: white;
   border-radius: 8px;
+  transition: all 0.25s ease-in-out;
+}
+.imageCard {
+  height: 400px;
+}
+.imagecard2 {
+  height: 400px;
 }
 .imageCard:hover {
   box-shadow: 0 0 10px gray;
   cursor: pointer;
 }
+
 .imageCard img {
   object-fit: cover;
   width: 100%;
@@ -200,7 +210,7 @@ header {
 .imageCardDescription .imageCard-details {
   text-align: left;
   color: black;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   margin: 7px 0px;
   font-weight: 700;
   /* text-decoration: none; */
@@ -219,24 +229,118 @@ header {
 .imageCard-button span {
   color: #006bff;
   font-size: 18px;
+  transition: all 0.25s ease-in-out;
 }
 
 .imageCard-button i {
   color: #006bff;
+  transition: all 0.25s ease-in-out;
+}
+.imageCard:hover span,
+.imageCard:hover i {
+  color: black;
+}
+.imageCard:hover i {
+  transform: translateX(5px);
+  scale: 1.2;
 }
 
 a {
   text-decoration: none;
 }
+hr {
+  margin: 5px auto;
+  background-color: rgb(236, 231, 231);
+  border-radius: 2px;
+  width: 80%;
+  height: 3px;
+  border: none;
+}
 .resourceHubBlogPost {
-  width: 60%;
-  border: 2px solid red;
-  margin: 0px auto;
+  width: 70%;
+  /* border: 2px solid red; */
+  margin: 2rem auto;
   padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
 }
 .resource-sub-navbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   font-size: 20px;
+  margin: 0 10%;
+  /* border: 2px solid black; */
+}
+.resource-sub-navbar a {
+  padding: 5px 10px;
+  margin-bottom: -5px;
+}
+.resource-sub-navbar a:active {
+  color: blue;
+  border-bottom: blue;
+}
+.resource-sub-navbar a:hover {
+  background-color: rgb(236, 231, 231);
+  /* border: 2px solid black; */
+}
+.blog-post-content {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+.ebook-title-page-no {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  /* border: 2px solid blue; */
+}
+.image-card-content {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  /* border: 1px solid grey; */
+}
+
+h4 {
+  font-size: 1.75rem;
+  line-height: 1.4;
+  text-align: left;
+  color: rgb(11, 53, 88);
+  font-weight: 700;
+}
+.page-no {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  transition: all 0.25s ease-in-out;
+}
+.page-no .total-pages {
+  color: rgb(71, 103, 136);
+
+  padding: 5px;
+  font-size: 1.125rem;
+  line-height: 1.6;
+  font-weight: 400;
+}
+.page-no .curr-page {
+  color: blue;
+  padding: 5px;
+  /* border: 2px solid black; */
+  font-size: 1.125rem;
+  line-height: 1.6;
+  font-weight: 400;
+}
+.page-no i:hover {
+  background-color: rgb(177, 183, 192);
+  scale: 1.25;
+  border-radius: 50%;
+  cursor: pointer;
+  color: blue;
 }
