--- a/Manish/style.css
+++ b/Manish/style.css
@@ -412,6 +412,10 @@ body {
     border-left: 1px solid #eee;
 }
 
+.pricing-table-table td:nth-child(4) {
+    background-color: #f2f7ff;
+}
+
 .pricing-table-table td:not(:first-child) p {
     color: rgb(71, 103, 136);
     font-size: 0.875rem;
@@ -442,22 +446,42 @@ body {
 }
 
 
-/* .pricing-table {
-    position: relative;
-    z-index: 1;
+
+
+  /* Styling for scrollbar effect */
+
+.pricing-table {
+    position: sticky;
+    background-color: white; 
+    top: 0;
+    z-index: 2; 
 }
 
 .pricing-table-wrapper {
     overflow-y: scroll;
-    max-height: 500px; 
+    /* max-height: 600px;  */
     position: relative;
     z-index: 0;
+}
+
+/* Hide scrollbar for WebKit browsers */
+.pricing-table-wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for Firefox, IE, and Edge */
+.pricing-table-wrapper {
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
 }
 
 .pricing-table-wrapper .table-container {
     position: relative;
     z-index: 1;
-} */
+}
+
+
+
 
 /* **************************** Styling Section 3*************************** */
 #faq-section {
@@ -465,6 +489,7 @@ body {
     background-color: #f0f3f8;
     padding: 6rem;
     margin-top: 6rem;
+    z-index: 10;
 }
 
 .left {
