--- a/Avishek/styel.css
+++ b/Avishek/styel.css
@@ -456,7 +456,7 @@ animation-iteration-count: infinite;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin-bottom: 4%;
 }
 
@@ -721,6 +721,63 @@ animation-iteration-count: infinite;
     font-size: 2.7rem;
 } 
 
+.design{
+    margin: 7%;
+    display: flex;
+    width: 80%;
+}
+
+.design .des_img{
+    width: 50%;
+}
+
+.design .des_img > img{
+    width: 100%;
+}
+
+.design .des_txt{
+    width: 50%;
+}
+
+
+.last{
+    width: 77%;
+    background-color: rgb(11,53,88);
+    color: white;
+    border-radius: 50px;
+    display: flex;
+    
+}
+.last .lst_txt{
+    margin: 6%;
+    width: 80%;
+}
+
+.last .lst_txt > h1{
+    font-size: 2.3rem;
+}
+
+.last .lst_txt > p{
+    font-size: 1.2rem;
+}
+
+.last .lst_bttn{
+    margin: 12%;
+    width: 20%;
+    text-align: center;
+    /* border: 2px solid white; */
+}
+
+.last .lst_bttn > a{
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    padding: 15px 20px;
+    background-color:  rgb(0,107,255);
+    border-radius: 10px;
+    font-weight: 600;
+    
+}
 
 
 
