--- a/Avishek/style.css
+++ b/Avishek/style.css
@@ -762,6 +762,24 @@ animation-iteration-count: infinite;
     width: 80%;
 }
 
+.design .des_txt{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.design .des_txt .des_txt_sub > p{
+    width: 70%;
+    font-size: 1.1rem;
+    color:  rgb(71,103,136);
+}
+
+.design .des_txt .des_txt_sub .icon > span{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: rgb(11,53,88);
+}
 .design .des_img{
     width: 50%;
 }
