--- a/Manish/style.css
+++ b/Manish/style.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 5rem 0;
+    padding-bottom: 0;
 }
 
 #pricing-plan-components {
@@ -315,6 +316,10 @@ body {
     text-align: left;
 }
 
+.card .plan-header .plan-title {
+    font-size: 24px;
+}
+
 .row .table-title {
     font-size: 1.75rem;
     margin-bottom: 0.8rem;
@@ -518,12 +523,13 @@ body {
     align-items: center;
     border-bottom: 2px solid #c6d7e6;
     padding: 1.6rem 1rem;
+    font-weight: 100;
 }
 
 .icon {
     border-radius: 50%;
     background-color: #e7edf6;
-    width: 40px; 
+    min-width: 40px; 
     height: 40px;
     display: flex;
     align-items: center;
@@ -534,7 +540,8 @@ body {
 .faq-question h2 {
     margin-left: 15px;
     font-size: 1.5rem;
-    color: #0b3558;
+    color: #1b496f;
+    font-weight: 600;
 }
 
 
@@ -544,12 +551,15 @@ body {
     background-color: #0a2540;
     color: white;
     display: flex;
+    z-index: 10;
+    
 }
 
 .booking-container {
     display: flex;
     padding: 6rem 9rem;
     gap: 4rem;
+    width: 100%;
 }
 
 .content-container {
@@ -597,8 +607,282 @@ body {
 .signup-free-button:hover {
     background-color: #0353c4;
 }
+
 .button-container .sales-button {
     border: 1px solid white;
     padding: 0.8rem 1.2rem;
     border-radius: 10px;
+}
+
+
+
+@media screen and (max-width: 1360px) {
+
+    #pricing-plan-components {
+        margin-inline: 1.5rem;
+    }
+
+    .pricing-table {
+        margin-inline: 1.5rem;
+    }
+
+    .table-container {
+        margin-inline: 1.5rem;
+    }
+
+    #faq-section {
+        padding: 6rem 1rem;
+        /* gap: 5rem; */
+    }
+
+    .booking-container {
+        padding: 6rem 2rem;
+        gap: 4rem;
+    }
+
+    .button-container {
+        justify-content: flex-end;
+    } 
+    
+}
+
+
+@media screen and (max-width: 1190px)  /*and (max-width: 1360px)*/{
+
+    #pricing-plan-components{
+        margin-inline: 3rem;
+    }
+    
+    .billing {
+        text-align: center;
+        justify-content: center;
+    }
+
+    .pricing-plan-card {
+        flex-direction: column;
+    }
+    
+
+    .pricing-table {
+        margin-inline: 3rem;
+        margin-block: 4rem;
+    }
+    
+    .pricing-table .row {
+        width: 28%; 
+        margin-right: 1rem;
+    }
+    
+    .card .price-details .price {
+        font-size: 1.2rem;
+    }
+    
+    .info-popup {
+        width: fit-content;
+        height: fit-content;
+    }
+    .price-info {
+        margin-bottom: 0;
+    }
+    
+
+    .table-container {
+        margin-inline: 3rem;
+    }
+
+
+    #faq-section {
+        padding: 6rem 2rem;
+        gap: 5rem;
+    }
+    
+
+    .faq-question {
+        padding: 1.6rem 0.5rem;
+    }
+    
+    
+    
+    .booking-container {
+        padding: 6rem 2.5rem;
+        gap: 1rem;
+    }
+    
+    .button-container .signup-free-button{
+        padding: 0.8rem 0.8rem;
+    }
+    
+    .button-container .sales-button {
+        padding: 0.8rem 0.8rem;
+    } 
+}
+
+
+@media screen and (max-width: 768px) {
+
+    .title {
+        text-align: center;
+        font-size: 2.3rem;
+        font-weight: 700;
+        color: rgb(11, 53, 88);
+        margin-bottom: 1rem;
+    }
+    
+
+    #pricing-plan-components{
+        margin-inline: 2rem;
+    }
+    
+    .billing {
+        text-align: center;
+        justify-content: center;
+    }
+
+    .pricing-plan-card {
+        flex-direction: column;
+    }
+    
+
+    .pricing-table {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-inline: 2rem;
+        margin-block: 3rem;
+    }
+    
+    .pricing-table .row {
+        width: 100%; 
+        margin-right: 1rem;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .pricing-table .columns { 
+        flex-wrap: wrap;
+    }
+    
+    .card .price-details .price {
+        font-size: 1.2rem;
+    }
+
+    .row .subtitle {
+        text-align: center;
+    }
+    
+    .card .plan-header .plan-title {
+        font-size: 23px;
+    }
+    
+    .row .table-title {
+        text-align: center;
+    }
+    
+    .row .description {
+        text-align: center;
+        margin-bottom: 1.7rem;
+    }
+    
+    .table-container {
+        margin-inline: 2rem;
+    }
+    
+
+    #faq-section {
+        flex-direction: column;
+        padding: 3rem 2rem;
+        gap: 2rem;
+    }
+
+    .faq-header {
+        padding: 0 1rem;
+        font-size: 1.5rem;
+        line-height: 1.2;
+        text-align: center;
+    }
+
+    .booking-container {
+        flex-direction: column;
+        justify-content: center;
+        padding: 2.5rem 1rem;
+        /* gap: 4rem; */
+        width: 100%;
+    }
+
+    .content-container h2 {
+        font-size: 2.5rem;
+        text-align: center;
+    }
+    
+    .content-container p {
+        text-align: center;
+    }
+    
+    .button-container {
+        justify-content: center;
+        align-items: center;
+    }
+    
+
+}
+
+
+@media screen and (max-width: 600px) {
+
+    .pricing-table-wrapper .table-container:first-child {
+        display: none;
+    }
+
+    .pricing-table {
+        position: relative;
+        background-color: white;
+    }
+    
+    
+    .pricing-table .columns { 
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .pricing-table .columns .card {
+        flex: 1;
+    } 
+
+    .table-container .core-feature-table {
+        display: none;
+    }
+
+    .title {
+        text-align: center;
+        font-size: 1.8rem;
+    }
+    
+    .faq-header {
+        font-size: 1.2rem;
+    }
+
+    .content-container h2 {
+        font-size: 1.7rem;
+    }
+
+    .content-container p {
+        font-size: 1.1rem;
+    }
+
+    .button-container {
+        flex-direction: column;
+    }
+
+    .button-container .signup-free-button{
+        padding: 0.8rem 1rem;
+        width: 90%;
+        text-align: center;
+    }
+
+    .button-container .sales-button {
+        padding: 0.8rem 1rem;
+        width: 90%;
+        text-align: center;
+    }
+    
 }
